# deutsch-tutor

./: .dockerignore  .gitignore  Dockerfile  README.md  dictionary.md  llm.py  main.py  noun_gender.md  package-lock.json  prompts.py  pronunciation.md  pyproject.toml  verbs.md
backend/: main.py  prompts.py  rest_models.py  tutor.py  utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  Conjugation.css  Conjugation.jsx  Dictionary.css  Dictionary.jsx  Noun.css  Noun.jsx  index.css  utils.js
